--- a/Twin Feats/index.html
+++ b/Twin Feats/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twin Feats Software</title>
+    <link rel="stylesheet" href="css/standard.css">
 </head>
 <body>
     <nav>
