--- a/CodeChallenge4/index.html
+++ b/CodeChallenge4/index.html
@@ -3,20 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Challenge 3</title>
+    <title>Code Challenge 4</title>
     <link rel="stylesheet" href="css/standard.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gloria Hallelujah|Sofia|Open Sans">
 </head>
 <body>
+ 
+    
+    <div class="Title">
+        Pets @ Home
+    </div>
+
+    <div class="Subtitle">
+        Adopt a furry family member today!
+    </div>
+
     <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#apps">Applications</a>
-        <a href="#contact">Contact</a>
+        <a href="#Home">Home</a>
+        <a href="#Cats">Cats</a>
+        <a href="#Dogs">Dogs</a>
     </nav>
 
-    <section id="kitten">Kitten!
-       <img src="images/kitten.jpg" alt="KittenPic">  
-    </section>
+
 </body>
 </html>
