--- a/CodeChallenge4/index.html
+++ b/CodeChallenge4/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="Subtitle">
-        Adopt a furry family member today!
+        Adopt a furry family member today!!
     </div>
 
     <nav>
