working on front page

--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,24 @@
     <link rel="stylesheet" href="styles.css">
 
 </head>
+
 <body class="charactersBackground">
 
     <nav>
-        <ul>
-            <li><a href="index.html">Characters</a></li>
-            <li><a href="pages/Aang.html">Aang</a></li>
-            <li><a href="pages/Katara.html">Katara</a></li>
-            <li><a href="pages/Toph.html">Toph</a></li>
-            <li><a href="pages/Zuko.html">Zuko</a></li>
-        </ul>
+        <a href="index.html">Characters</a>
+        <a href="pages/Aang.html">Aang</a>
+        <a href="pages/Katara.html">Katara</a>
+        <a href="pages/Toph.html">Toph</a>
+        <a href="pages/Zuko.html">Zuko</a>
     </nav>
-    
+
+    <div class="charContainer">
+        <a href="pages/Aang.html"><img src="images/charAang.png" id="charPageAang" alt=""></a>
+        <a href="pages/Katara.html"><img src="images/charKatara.png" id="charPageKatara" alt=""></a>
+        <a href="pages/Toph.html"><img src="images/charToph.png" id="charPageToph" alt=""></a>
+        <a href="pages/Zuko.html"><img src="images/charZuko.webp" id="charPageZuko" alt=""></a>
+    </div>
+
 </body>
+
 </html>
