--- a/FinalProject/pages/Katara.html
+++ b/FinalProject/pages/Katara.html
@@ -29,6 +29,34 @@
                 <span class="material-symbols-outlined"> expand_more </span>
             </button>
             <div class="btnContent">
+                <!-- Source: https://avatar.fandom.com/wiki/Katara?so=search#Early_life -->
+                <p>Born into the diminished Southern Water Tribe capital of Wolf Cove to Hakoda and Kya, Katara faced
+                    the reality of her tribe's dwindling strength from an early age. At the time of her birth, fifty
+                    years of repeated Fire Nation raids intended to capture and imprison the tribe's waterbenders had
+                    left them devoid of benders.
+                    While the Southern Water Tribe's defenses would have crumbled under the might of the Fire Nation,
+                    the tribe's relative inaccessibility in the frigid South Pole and the Fire Nation's perception that
+                    they were a non-threat meant that they were mostly left alone.
+                    Katara grew up within a loving, close family and community in her tribe.</p>
+
+                <p>However, when Katara was eight, the Fire Nation again raided Wolf Cove when charged by Fire Lord
+                    Azulon to find and dispose of the last remaining waterbender in the tribe. During the battle, the
+                    leader of the raid Yon Rha confronted Katara's mother, who was taking refuge in the family's igloo.
+                    Seeking shelter with her mother, Katara ran back to her home and interrupted their exchange.
+                    Realizing the intentions of Yon Rha, who had demanded Kya tell him the identity of the waterbender,
+                    Kya insisted Katara leave and gave herself up as the last waterbender, lying to protect her
+                    daughter. Katara ran to fetch her father, but by the time they returned, Yon Rha had left and her
+                    mother had been killed. The death of their mother had a profound impact on both Katara and Sokka,
+                    and both began to feel deep hatred and resentment toward the Fire Nation as a result.</p>
+
+                <p>With the absence of a mother figure in the family, Katara soon found herself filling the role left
+                    behind by Kya. She began to take on many of the domestic responsibilities expected of women of the
+                    Southern Water Tribe, despite her young age. When Katara was around twelve years old, her father,
+                    Chief Hakoda, left to fight in the Hundred Year War with the rest of the men of the Southern Water
+                    Tribe. Katara and Sokka were left in the care of their grandmother, Kanna.
+                    Though Kanna loved the two and cared deeply for them, Katara was left feeling traumatized and alone.
+                    Living in a tribe consisting almost completely of women, children, and the elderly, she took care of
+                    not only her own family but of the whole Southern Water Tribe as well.</p>
             </div>
             <button type="button" class="btnFooter">Close Section</button>
         </section>
@@ -39,6 +67,7 @@
                 <span class="material-symbols-outlined"> expand_more </span>
             </button>
             <div class="btnContent">
+                <p>Healing, bloodbending</p>
             </div>
             <button type="button" class="btnFooter">Close Section</button>
         </section>
@@ -49,7 +78,7 @@
                 <span class="material-symbols-outlined"> expand_more </span>
             </button>
             <div class="btnContent">
-                <p>Lured into traps easily. Doesn't know modern tech, customs, history etc.</p>
+                <p>Impulsive when emotional, too trusting of others, scarred by loss</p>
             </div>
             <button type="button" class="btnFooter">Close Section</button>
         </section>
@@ -60,6 +89,7 @@
                 <span class="material-symbols-outlined"> expand_more </span>
             </button>
             <div class="btnContent">
+                <p>North pole guy, bloodbending witch</p>
             </div>
             <button type="button" class="btnFooter">Close Section</button>
         </section>
@@ -68,56 +98,5 @@
     </main>
 </body>
 <script src="../scripts.js"></script>
-
-<h1>Katara</h1>
-
-<h2>Early Life</h2>
-<!-- Source: https://avatar.fandom.com/wiki/Katara?so=search#Early_life -->
-<p>Born into the diminished Southern Water Tribe capital of Wolf Cove to Hakoda and Kya, Katara faced the reality of her
-    tribe's dwindling strength from an early age. At the time of her birth, fifty years of repeated Fire Nation raids
-    intended to capture and imprison the tribe's waterbenders had left them devoid of benders. While the Southern Water
-    Tribe's defenses would have crumbled under the might of the Fire Nation, the tribe's relative inaccessibility in the
-    frigid South Pole and the Fire Nation's perception that they were a non-threat meant that they were mostly left
-    alone.
-    Katara grew up within a loving, close family and community in her tribe.</p>
-
-<p>However, when Katara was eight, the Fire Nation again raided Wolf Cove when charged by Fire Lord Azulon to find and
-    dispose of the last remaining waterbender in the tribe. During the battle, the leader of the raid Yon Rha confronted
-    Katara's mother, who was taking refuge in the family's igloo. Seeking shelter with her mother, Katara ran back to
-    her
-    home and interrupted their exchange. Realizing the intentions of Yon Rha, who had demanded Kya tell him the identity
-    of
-    the waterbender, Kya insisted Katara leave and gave herself up as the last waterbender, lying to protect her
-    daughter.
-    Katara ran to fetch her father, but by the time they returned, Yon Rha had left and her mother had been killed. The
-    death of their mother had a profound impact on both Katara and Sokka, and both began to feel deep hatred and
-    resentment
-    toward the Fire Nation as a result.</p>
-
-<p>With the absence of a mother figure in the family, Katara soon found herself filling the role left behind by Kya. She
-    began to take on many of the domestic responsibilities expected of women of the Southern Water Tribe, despite her
-    young
-    age. When Katara was around twelve years old, her father, Chief Hakoda, left to fight in the Hundred Year War with
-    the
-    rest of the men of the Southern Water Tribe. Katara and Sokka were left in the care of their grandmother, Kanna.
-    Though Kanna loved the two and cared deeply for them, Katara was left feeling traumatized and alone. Living in a
-    tribe
-    consisting almost completely of women, children, and the elderly, she took care of not only her own family but of
-    the
-    whole Southern Water Tribe as well.</p>
-
-<h2>Special Abilities</h2>
-<p>Healing, bloodbending</p>
-
-<h2>Motivations</h2>
-<p></p>
-
-<h2>Weaknesses and Flaws</h2>
-<p></p>
-
-<h2>Mentors</h2>
-<p>North pole guy, bloodbending witch</p>
-
-</body>
 
 </html>
