--- a/FinalProject/pages/Toph.html
+++ b/FinalProject/pages/Toph.html
@@ -28,6 +28,44 @@
                 <span class="material-symbols-outlined"> expand_more </span>
             </button>
             <div class="btnContent">
+                <!-- Source: https://avatar.fandom.com/wiki/Toph_Beifong#Early_life -->
+                <p>Toph was born in 88 AG as the only child of the wealthy Beifong family from Gaoling. Born blind, she
+                    was sheltered by
+                    her parents, who believed her blindness made her fragile and incapable of looking after herself.
+                    They went to
+                    extreme measures to protect her, including hiding her existence from the rest of the world, which
+                    resulted in very
+                    few people knowing that the Beifong family even had a daughter. Her parents expected their daughter
+                    to be
+                    well-mannered and proper due to their noble status in Earth Kingdom society, something with which
+                    Toph secretly
+                    disagreed, causing her to resent her parents' treatment.</p>
+
+                <p>One day when she was around five years old, Toph ran away from home and hid in a cave inhabited by
+                    badgermoles.
+                    Badgermoles were the first earthbenders and according to Toph, she felt that she and the creatures
+                    understood each
+                    other as they were both blind. She learned earthbending by imitating their movements. In this way,
+                    she learned
+                    to "see" through the use of her earthbending, detecting people and other objects through their
+                    vibrations, which she
+                    sensed through the ground via her bare feet. Her blindness and patience helped her to develop a keen
+                    sense of
+                    hearing. Toph would continue to sporadically run away from home to find refuge in the Foggy Swamp
+                    due to its close
+                    proximity to her hometown.</p>
+
+                <p>Lao Beifong later hired the earthbender teacher, Master Yu, to instruct her. Acting upon the orders
+                    of Toph's
+                    father, he did not teach her anything other than beginner's moves, unaware that she had already
+                    achieved mastery in
+                    the art. She became such a formidable bender that she secretly entered underground earthbending
+                    tournaments as the
+                    Blind Bandit, and was successful to the point where she became the champion of Earth Rumble more
+                    than once. After
+                    meeting Aang when she was 12 years old, Toph soon ran away in order to teach him earthbending, but
+                    also to escape
+                    her parents, who never granted her any real freedom</p>
             </div>
             <button type="button" class="btnFooter">Close Section</button>
         </section>
@@ -35,9 +73,18 @@
         <section>
             <button type="button" class="btnHeader">
                 <h2>Special Abilities</h2> <span class="material-symbols-outlined"> expand_more </span>
-
             </button>
             <div class="btnContent">
+                <h3>Earthbending Sonar</h3>
+                <img src="../images/sonar.gif" alt="">
+                <p>
+                    While Toph can't see with her eyes, she learned to use earthbending much like a sonar.
+                    While on solid ground, she can detect things that are on or below ground.
+                </p>
+                <h3>Metalbending</h3>
+                <p>Toph learns to detect traces of earth in metal and becomes the first metalbender.</p>
+                <h3>Lie detector</h3>
+                <p>Toph can tell when most people are lying by monitoring their heartrate with earthbending.</p>
             </div>
             <button type="button" class="btnFooter">Close Section</button>
         </section>
@@ -45,10 +92,9 @@
         <section>
             <button type="button" class="btnHeader">
                 <h2>Weaknesses and Flaws</h2> <span class="material-symbols-outlined"> expand_more </span>
-
             </button>
             <div class="btnContent">
-                <p>Lured into traps easily. Doesn't know modern tech, customs, history etc.</p>
+                <p>Sand, flying enemies, needing to be up in the air or in deep water</p>
             </div>
             <button type="button" class="btnFooter">Close Section</button>
         </section>
@@ -56,9 +102,9 @@
         <section>
             <button type="button" class="btnHeader">
                 <h2>Mentors</h2> <span class="material-symbols-outlined"> expand_more </span>
-
             </button>
             <div class="btnContent">
+                <p>None. Too cool to need any</p>
             </div>
             <button type="button" class="btnFooter">Close Section</button>
         </section>
@@ -67,44 +113,5 @@
     </main>
 </body>
 <script src="../scripts.js"></script>
-<h1>Toph Beifong</h1>
-
-<h2>Early Life</h2>
-<!-- Source: https://avatar.fandom.com/wiki/Toph_Beifong#Early_life -->
-<p>Toph was born in 88 AG as the only child of the wealthy Beifong family from Gaoling. Born blind, she was sheltered by
-    her parents, who believed her blindness made her fragile and incapable of looking after herself. They went to
-    extreme measures to protect her, including hiding her existence from the rest of the world, which resulted in very
-    few people knowing that the Beifong family even had a daughter. Her parents expected their daughter to be
-    well-mannered and proper due to their noble status in Earth Kingdom society, something with which Toph secretly
-    disagreed, causing her to resent her parents' treatment.</p>
-
-<p>One day when she was around five years old, Toph ran away from home and hid in a cave inhabited by badgermoles.
-    Badgermoles were the first earthbenders and according to Toph, she felt that she and the creatures understood each
-    other as they were both blind. She learned earthbending by imitating their movements. In this way, she learned
-    to "see" through the use of her earthbending, detecting people and other objects through their vibrations, which she
-    sensed through the ground via her bare feet. Her blindness and patience helped her to develop a keen sense of
-    hearing. Toph would continue to sporadically run away from home to find refuge in the Foggy Swamp due to its close
-    proximity to her hometown.</p>
-
-<p>Lao Beifong later hired the earthbender teacher, Master Yu, to instruct her. Acting upon the orders of Toph's
-    father, he did not teach her anything other than beginner's moves, unaware that she had already achieved mastery in
-    the art. She became such a formidable bender that she secretly entered underground earthbending tournaments as the
-    Blind Bandit, and was successful to the point where she became the champion of Earth Rumble more than once. After
-    meeting Aang when she was 12 years old, Toph soon ran away in order to teach him earthbending, but also to escape
-    her parents, who never granted her any real freedom</p>
-
-<h2>Special Abilities</h2>
-<p>Earth sonar, Metalbending, Lie detector</p>
-
-<h2>Motivations</h2>
-<p></p>
-
-<h2>Weaknesses and Flaws</h2>
-<p>Sand, flying enemies, water or needing to be up in the air</p>
-
-<h2>Mentors</h2>
-<p>None. Too cool to need any</p>
-
-</body>
 
 </html>
