--- a/FinalProject/pages/Zuko.html
+++ b/FinalProject/pages/Zuko.html
@@ -39,6 +39,8 @@
                 <span class="material-symbols-outlined"> expand_more </span>
             </button>
             <div class="btnContent">
+                <img src="../images/lightning.gif" alt="">
+                <p>Fire breath, redirect lightning, dual swords</p>
             </div>
             <button type="button" class="btnFooter">Close Section</button>
         </section>
@@ -49,7 +51,8 @@
                 <span class="material-symbols-outlined"> expand_more </span>
             </button>
             <div class="btnContent">
-                <p>Lured into traps easily. Doesn't know modern tech, customs, history etc.</p>
+                <p>Single minded obsession with honor and gaining the approval of his father, lack of resources,
+                    banished/criminal status, inner turmoil</p>
             </div>
             <button type="button" class="btnFooter">Close Section</button>
         </section>
@@ -60,6 +63,7 @@
                 <span class="material-symbols-outlined"> expand_more </span>
             </button>
             <div class="btnContent">
+                <p>Uncle Iroh</p>
             </div>
             <button type="button" class="btnFooter">Close Section</button>
         </section>
@@ -68,26 +72,5 @@
     </main>
 </body>
 <script src="../scripts.js"></script>
-
-
-<h1>Zuko</h1>
-
-<h2>Early Life</h2>
-<p></p>
-
-<h2>Special Abilities</h2>
-<img src="../images/lightning.gif" alt="">
-<p>Fire breath, redirect lightning, dual swords</p>
-
-<h2>Motivations</h2>
-<p>Honor</p>
-
-<h2>Weaknesses and Flaws</h2>
-<p></p>
-
-<h2>Mentors</h2>
-<p>Uncle Iroh</p>
-
-</body>
 
 </html>
