Front Page formatted

--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -19,11 +19,13 @@
         <a href="pages/Zuko.html">Zuko</a>
     </nav>
 
+    <H1 id="indexTitle">Choose a Character</H1>
+
     <div class="charContainer">
-        <a href="pages/Aang.html"><img src="images/charAang.png" id="charPageAang" alt=""></a>
-        <a href="pages/Katara.html"><img src="images/charKatara.png" id="charPageKatara" alt=""></a>
-        <a href="pages/Toph.html"><img src="images/charToph.png" id="charPageToph" alt=""></a>
-        <a href="pages/Zuko.html"><img src="images/charZuko.webp" id="charPageZuko" alt=""></a>
+        <a href="pages/Aang.html"><img src="images/charAangFitted.png" id="charPageAang" alt=""></a>
+        <a href="pages/Katara.html"><img src="images/charKataraFitted.png" id="charPageKatara" alt=""></a>
+        <a href="pages/Toph.html"><img src="images/charTophFitted.png" id="charPageToph" alt=""></a>
+        <a href="pages/Zuko.html"><img src="images/charZukoFitted.png" id="charPageZuko" alt=""></a>
     </div>
 
 </body>
