--- a/FinalProject/pages/Aang.html
+++ b/FinalProject/pages/Aang.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
 </head>
 
-<body class="AangBody">
+<body class="AangBody size">
 	<nav>
 		<a href="../index.html">Characters</a>
 		<a href="Aang.html">Aang</a>
@@ -124,7 +124,7 @@
 
 		<section>
 			<button type="button" class="btnHeader">
-				<h2>Weaknesses and Flaws</h2>
+				<h2>Weaknesses</h2>
 				<span class="material-symbols-outlined"> expand_more </span>
 			</button>
 			<div class="btnContent">
