--- a/FinalProject/pages/Katara.html
+++ b/FinalProject/pages/Katara.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
 </head>
 
-<body class="kataraBody">
+<body class="kataraBody size">
 
     <nav>
         <a href="../index.html">Characters</a>
@@ -23,7 +23,6 @@
     <main>
         <h1>Katara</h1>
         <section>
-            <!-- Source: https://avatar.fandom.com/wiki/Aang#Early_life -->
             <button type="button" class="btnHeader">
                 <h2>Early Life</h2>
                 <span class="material-symbols-outlined"> expand_more </span>
@@ -74,7 +73,7 @@
 
         <section>
             <button type="button" class="btnHeader">
-                <h2>Weaknesses and Flaws</h2>
+                <h2>Weaknesses</h2>
                 <span class="material-symbols-outlined"> expand_more </span>
             </button>
             <div class="btnContent">
