--- a/FinalProject/pages/Toph.html
+++ b/FinalProject/pages/Toph.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
 </head>
 
-<body class="tophBody">
+<body class="tophBody size">
 
     <nav>
         <a href="../index.html">Characters</a>
@@ -22,7 +22,6 @@
     <main>
         <h1>Toph Beifong</h1>
         <section>
-            <!-- Source: https://avatar.fandom.com/wiki/Aang#Early_life -->
             <button type="button" class="btnHeader">
                 <h2>Early Life</h2>
                 <span class="material-symbols-outlined"> expand_more </span>
@@ -91,7 +90,7 @@
 
         <section>
             <button type="button" class="btnHeader">
-                <h2>Weaknesses and Flaws</h2> <span class="material-symbols-outlined"> expand_more </span>
+                <h2>Weaknesses</h2> <span class="material-symbols-outlined"> expand_more </span>
             </button>
             <div class="btnContent">
                 <p>Sand, flying enemies, needing to be up in the air or in deep water</p>
