front page picture, footer, navbar responsive

--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -19,7 +19,11 @@
         <a href="pages/Zuko.html">Zuko</a>
     </nav>
 
-    <H1 id="indexTitle">Choose a Character</H1>
+    <div id="indexTitle">
+        <img src="images/Avatar_The_Last_Airbender_logo.svg.png" alt="">
+    </div>
+
+    <H1>Select a Character</H1>
 
     <div class="charContainer">
         <a href="pages/Aang.html"><img src="images/charAangFitted.png" id="charPageAang" alt=""></a>
@@ -28,6 +32,14 @@
         <a href="pages/Zuko.html"><img src="images/charZukoFitted.png" id="charPageZuko" alt=""></a>
     </div>
 
+    <footer>
+        <a href="https://github.com/jford960/Foundations-Web-Development/tree/31ee582db8c132bf3f8fbe84d24439197315729d/FinalProject"
+            target="_blank">
+            <i class="fa fa-github">My Github Repo</i>
+        </a>
+        <a href="https://www.nick.com/shows/avatar-the-last-airbender" target="_blank">More of Team Avatar</a>
+    </footer>
 </body>
+
 
 </html>
