--- a/FinalProject/pages/Zuko.html
+++ b/FinalProject/pages/Zuko.html
@@ -109,7 +109,13 @@
             <button type="button" class="btnFooter">Close Section</button>
         </section>
 
-        <footer></footer>
+        <footer>
+            <a href="https://github.com/jford960/Foundations-Web-Development/tree/31ee582db8c132bf3f8fbe84d24439197315729d/FinalProject"
+                target="_blank">
+                <i class="fa fa-github">My Github Repo</i>
+            </a>
+            <a href="https://www.nick.com/shows/avatar-the-last-airbender" target="_blank">More of Team Avatar</a>
+        </footer>
     </main>
 </body>
 <script src="../scripts.js"></script>
